fixtures/vyper/simple/overflow/positive/u64.vy
#! {
#!   "modes": [
#!     "V >=0.4.0"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "18446744073709551615"
#!           ],
#!           "caller": "0xe59BbF6Ea26A81569902e2C7347570F0B9b9E557"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: uint64) -> uint64:
    return witness + 1
